--- a/src/pages/Cart.css
+++ b/src/pages/Cart.css
@@ -1,5 +1,5 @@
 .cart-page {
-  padding-top: 8rem;
+  padding-top: 10rem;
   padding-bottom: 8rem;
 }
 
