--- a/src/pages/ProductDetail.css
+++ b/src/pages/ProductDetail.css
@@ -1,5 +1,5 @@
 .product-detail-page {
-  padding-top: 8rem;
+  padding-top: 10rem;
   padding-bottom: 8rem;
 }
 
