--- a/src/pages/Shop.css
+++ b/src/pages/Shop.css
@@ -1,5 +1,5 @@
 .shop-page {
-  padding-top: 8rem;
+  padding-top: 10rem;
   padding-bottom: 8rem;
 }
 
